BRAZILIAN: Brazilian Portuguese RM 2.2 Updated UI Bundle based on EN rev75227
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@75266 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_pt_BR.properties
+++ b/rm-share/config/alfresco/messages/rm_pt_BR.properties
@@ -85,6 +85,8 @@ message.pdf-record-fonts.transfer=Verifique se algum arquivo PDF que acabou de s
 message.pdf-record-fonts.unknown=Se a transfer\u00eancia ou ades\u00e3o incluiu arquivos PDF, verifique se as fontes incorporadas aplic\u00e1veis foram inclu\u00eddas.
 message.request-info-success=Informa\u00e7\u00f5es solicitadas com sucesso
 message.request-info-failure=Ocorreu um erro ao solicitar informa\u00e7\u00f5es
+message.confirm.delete-hold.title=Excluir espera
+message.confirm.delete-hold=Tem certeza de que deseja excluir ''{0}''?
 
 ## Admin Console
 message.admin-console-access-denied=Voc\u00ea precisa de permiss\u00f5es adicionais para acessar esta p\u00e1gina.
@@ -114,7 +116,6 @@ actions.file-to=Arquivar em...
 actions.manage-permissions=Gerenciar permiss\u00f5es
 actions.move-to=Mover para...
 actions.open-folder=Reabrir pasta
-actions.relinquish=Liberar espera
 actions.review-all=Revisar tudo
 actions.reviewed=Revisado
 actions.add-record-metadata=Adicionar metadados do documento arquiv\u00edstico
@@ -168,8 +169,6 @@ message.edit-review-as-of-date.failure=N\u00e3o foi poss\u00edvel atualizar data
 message.edit-review-as-of-date.success=Data inicial de revis\u00e3o atualizada com sucesso para ''{0}''
 message.open-folder.failure=N\u00e3o foi poss\u00edvel abrir a pasta de documento arquiv\u00edstico ''{0}''
 message.open-folder.success=A pasta de documento arquiv\u00edstico ''{0}'' foi aberta
-message.relinquish.failure=N\u00e3o foi poss\u00edvel liberar a espera
-message.relinquish.success=Espera liberada
 message.review-all.failure=N\u00e3o foi poss\u00edvel revisar documentos arquiv\u00edsticos na pasta ''{0}''
 message.review-all.success=Os documentos arquiv\u00edsticos na pasta ''{0}'' foram revisados
 message.reviewed.failure=N\u00e3o foi poss\u00edvel revisar ''{0}''
@@ -202,6 +201,8 @@ message.file-success=Relat\u00f3rio arquivado com sucesso como ''{0}''
 message.file-failure=N\u00e3o foi poss\u00edvel concluir a opera\u00e7\u00e3o do arquivo
 message.file-hold-report.failure=N\u00e3o foi poss\u00edvel gerar o relat\u00f3rio de espera
 message.file-hold-report.success=Relat\u00f3rio de espera gerado
+message.delete-hold.failure=N\u00e3o foi poss\u00edvel excluir espera
+message.delete-hold.success=Espera exclu\u00edda
 
 ## File Plan Status Indicators
 status.rm-accession=Ades\u00e3o pendente
@@ -444,6 +445,7 @@ file-to.substitution.date.day.label=Dia (ex.: Seg)
 file-to.substitution.date.day.long.label=Dia longo (ex.: Segunda)
 file-to.substitution.date.day.number.label=N\u00famero do dia (ex.: 1)
 file-to.substitution.date.day.year.label=Dia do ano (ex.: 216)
+file-to.substitution.date.day.month.label=Dia do m\u00eas (ex.: 18)
 file-to.substitution.date.month.short.label=M\u00eas curto (ex.: Jan)
 file-to.substitution.date.month.label=M\u00eas (ex.: Jan)
 file-to.substitution.date.month.long.label=M\u00eas longo (ex.: Janeiro)
