--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_pt_BR.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_pt_BR.properties
@@ -35,7 +35,7 @@ label.button-view-log=Visualizar log completo
 label.button-specify=Especificar
 label.button-export=Exportar
 label.button-file-record=Arquivar como documento arquiv\u00edstico
-label.button-apply=Aplicar
+label.button-apply=Executar Relat\u00f3rio de Auditoria
 label.button-details=Detalhes
 
 label.filed-log-message=O log de auditoria foi arquivado como um documento arquiv\u00edstico.
@@ -63,7 +63,7 @@ label.header-entries=N\u00famero de entradas
 label.header-from=De
 label.header-to=Para
 label.header-event=Evento
-label.header-property=Propriedade
+label.header-property=Metadados
 
 label.dialog-title=Detalhes do evento {0}
 label.property=Propriedade
