--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_pt_BR.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_pt_BR.properties
@@ -10,7 +10,7 @@ label.mandatory=Obrigat\u00f3rio
 
 label.datatype.unknown=Desconhecido
 label.datatype.text=Texto
-label.datatype.boolean=Booleano
+label.datatype.boolean=Caixa de sele\u00e7\u00e3o
 label.datatype.date=Data
 
 message.getpropertiesfail=N\u00e3o foi poss\u00edvel recuperar defini\u00e7\u00f5es de propriedade personalizada.
