--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_pt_BR.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_pt_BR.properties
@@ -22,19 +22,13 @@ form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 horas)
 
 record.folder.path.title=Clique para mostrar o texto de ajuda do campo do caminho da pasta de documento arquiv\u00edstico.
-record.folder.path.help=<p>As substitui\u00e7\u00f5es a seguir s\u00e3o permitidas:</p>\
-   <p></p>\
-   <p>date.day.short = Dom</p>\
-   <p>date.day = Dom</p>\
-   <p>date.day.long = Domingo</p>\
-   <p>date.day.number = 7 (1-7)</p>\
-   <p>date.day.year = 216 (001-365)</p>\
-   <p>date.month.short = Ago</p>\
-   <p>date.month = Ago</p>\
-   <p>date.month.long = Agosto</p>\
-   <p>date.month.number = 08 (01-12)</p>\
-   <p>date.year.short = 13</p>\
-   <p>date.year = 13</p>\
-   <p>date.year.long = 2013</p>\
-   <p>date.year.week = 31 (01-52)</p>\
-   <p>node.cm:title = <title value of the node></p>\
+record.folder.path.help=<p>Digite parte de uma propriedade de um documento arquiv\u00edstico para exibir as op\u00e7\u00f5es de preenchimento autom\u00e1tico. Por exemplo, se voc\u00ea digitar op\u00e7\u00f5es rm, inclua:</p>\
+	<ul><li>- a data de arquivamento {node.rma:dateFiled}</li>\
+	<li>- Registros de {node.rma:location}</li></ul>\
+	<p>Localiza\u00e7\u00e3o ser\u00e3o colocados no Plano de Arquivo com base em cada valor da propriedade de registro individual.</p>\
+	<p>Apenas 6 op\u00e7\u00f5es s\u00e3o oferecidas por vez.</p>\
+	<p>Op\u00e7\u00f5es de data definem que parte do caminho para a data a regra \u00e9 executada. Por exemplo, se for executado na segunda-feira, ent\u00e3o:</p>\
+	<ul><li>- Dia Curto {date.day.short} = Seg.</li>\
+	<li>- Dia Longo {date.day.long} = Segunda</li></ul>
+	<p>Consulte a Ajuda do Records Management para todas as op\u00e7\u00f5es de preenchimento autom\u00e1tico.</p>\
+	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Clique aqui para todas as op\u00e7\u00f5es de preenchimento autom\u00e1tico.</a></p>\
