--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_ru.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_ru.properties
@@ -4,7 +4,7 @@ title.properties=\u041e\u0431\u0449\u0435\u0435
 title.actions=\u0428\u0430\u0433\u0438 \u043f\u043e \u0440\u0430\u0437\u043c\u0435\u0449\u0435\u043d\u0438\u044e
 
 label.dispositionAuthority=\u0426\u0435\u043d\u0442\u0440 \u043f\u043e \u0440\u0430\u0437\u043c\u0435\u0449\u0435\u043d\u0438\u044e
-label.dispositionInstructions=\u0418\u043d\u0441\u0442\u0440\u0443\u043a\u0446\u0438\u044f \u043f\u043e \u0440\u0430\u0437\u043c\u0435\u0449\u0435\u043d\u0438\u044e
+label.dispositionInstructions=\u0418\u043d\u0441\u0442\u0440\u0443\u043a\u0446\u0438\u044f \u043f\u043e \u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044e
 label.appliedTo=\u041f\u0440\u0438\u043c\u0435\u043d\u044f\u0435\u0442\u0441\u044f \u043a
 label.appliedTo.record=\u0417\u0430\u043f\u0438\u0441\u044c
 label.appliedTo.folder=\u041f\u0430\u043f\u043a\u0430
