FRENCH: French RM 2.2 Updated UI Bundle based on EN rev75227 also this bundle fixes RM-1564
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@75297 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_fr.properties
@@ -8,9 +8,9 @@ label.required=Champs requis
 
 button.newevent=Nouvel \u00e9v\u00e9nement
 
-message.confirm.removeevent.title=Supprimer \u00e9v\u00e9nement
+message.confirm.removeevent.title=Supprimer l'\u00e9v\u00e9nement
 message.confirm.removeevent.text=Voulez-vous vraiment supprimer ''{0}'' ?
-message.removeevent.success=L'\u00e9v\u00e9nement a \u00e9t\u00e9 supprim\u00e9.
+message.removeevent.success=L'\u00e9v\u00e9nement a bien \u00e9t\u00e9 supprim\u00e9.
 message.removeevent.failure=Impossible de supprimer l'\u00e9v\u00e9nement.
 message.saveevent.saving=Enregistrement en cours de l'\u00e9v\u00e9nement...
 message.loadevent.failure=Impossible de charger les donn\u00e9es de l'\u00e9v\u00e9nement.
