--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_fr.properties
@@ -11,7 +11,7 @@ button.newlist=Nouvelle liste
 
 message.confirm.deletelist.title=Supprimer la liste
 message.confirm.deletelist.text=Voulez-vous vraiment supprimer ''{0}'' ?
-message.deletelist.success=La liste a \u00e9t\u00e9 supprim\u00e9e avec succ\u00e8s.
+message.deletelist.success=La liste a bien \u00e9t\u00e9 supprim\u00e9e.
 message.deletelist.failure=\u00c9chec de la suppression de la liste.
 message.loading.lists=Chargement de la liste de valeurs...
 message.loading.values=Chargement des valeurs...
@@ -21,7 +21,7 @@ message.empty.values=Entrez une valeur dans le champ suivant et cliquez sur 'Ajo
 message.empty.access=Cliquez sur 'Ajouter' pour fournir un acc\u00e8s \u00e0 la valeur pour un groupe ou un utilisateur.
 message.error=Impossible de charger les donn\u00e9es.
 message.addvalue.failure=Impossible d''ajouter la valeur ''{0}''
-message.addlist.failure.title=Echec de l''ajout de la liste
+message.addlist.failure.title=Echec de l'ajout de la liste
 message.addlist.failure.text=Impossible d''ajouter la liste\u00a0: {0}
 message.renamelist.failure.title=\u00c9chec lors du renommage de la liste
 message.renamelist.failure.text=Impossible de renommer la liste\u00a0: {0}
