--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_fr.properties
@@ -15,7 +15,7 @@ button.newreference=Nouvelle relation
 message.confirm.removereference.title=Supprimer relation
 message.confirm.removereference.text=Voulez-vous vraiment supprimer ''{0}'' ?
 message.confirm.removereference.text.parentchild=Voulez-vous vraiment supprimer ''{0}, {1}''\u00a0?
-message.removereference-success=La r\u00e9f\u00e9rence a \u00e9t\u00e9 supprim\u00e9e.
+message.removereference-success=La r\u00e9f\u00e9rence a bien \u00e9t\u00e9 supprim\u00e9e.
 message.removereference-failure=Impossible de supprimer la relation.
 message.savingReference=Enregistrement en cours de la relation...
 message.loadreference-failure=Impossible de charger les donn\u00e9es de la relation.
