--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get_fr.properties
@@ -1,4 +1,4 @@
-label.roles=R\ufffdles
+label.roles=R\u00f4les
 label.users=Utilisateurs
 label.groups=Groupes
 label.add-group=Ajouter
@@ -6,24 +6,24 @@ label.remove-group=Retirer
 label.add-user=Ajouter
 label.remove-user=Retirer
 
-message.get-roles-failure=Impossible de r\ufffdcup\ufffdrer les r\ufffdles utilisateur\ufffd: {0}
+message.get-roles-failure=Impossible de r\u00e9cup\u00e9rer les r\u00f4les utilisateur\u00a0: {0}
 
-message.load-peopleFinder-failure=Impossible de charger le composant \ufffd\ufffdUtilitaire de recherche de personnes\ufffd\ufffd
+message.load-peopleFinder-failure=Impossible de charger le composant \u00ab\u00a0Utilitaire de recherche de personnes\u00a0\u00bb
 message.load-groupFinder-failure=Impossible de charger le composant Utilitaire de recherche de groupes
-message.adduser-success=Succ\ufffds de l''ajout de l''utilisateur ''{0}''.
+message.adduser-success=L''utilisateur ''{0}'' a bien \u00e9t\u00e9 ajout\u00e9.
 message.adduser-failure=Impossible d''ajouter l''utilisateur ''{0}''.
-message.addgroup-success=Succ\ufffds de l''ajout du groupe ''{0}''.
+message.addgroup-success=Le groupe ''{0}'' a bien \u00e9t\u00e9 ajout\u00e9.
 message.addgroup-failure=Impossible d''ajouter le groupe ''{0}''.
 
-message.confirm.removeuser=Voulez-vous vraiment retirer ''{0}'' du r\ufffdle\ufffd?
-message.confirm.removeuser.title=Retirer l'utilisateur du r\ufffdle
-message.removeuser-success=Succ\ufffds de la suppression de l''utilisateur ''{0}''.
+message.confirm.removeuser=Voulez-vous vraiment retirer ''{0}'' du r\u00f4le\u00a0?
+message.confirm.removeuser.title=Retirer l'utilisateur du r\u00f4le
+message.removeuser-success=L''utilisateur ''{0}'' a bien \u00e9t\u00e9 supprim\u00e9.
 message.removeuser-failure=Impossible de retirer l''utilisateur ''{0}''.
 
-message.confirm.removegroup=Voulez-vous vraiment retirer ''{0}'' du r\ufffdle\ufffd?
-message.confirm.removegroup.title=Retirer le groupe du r\ufffdle
-message.removegroup-success=Le groupe ''{0}'' a \ufffdt\ufffd retir\ufffd du r\ufffdle.
-message.removegroup-failure=Impossible de retirer le groupe ''{0}''.
+message.confirm.removegroup=Voulez-vous vraiment retirer ''{0}'' du r\u00f4le\u00a0?
+message.confirm.removegroup.title=Supprimer le groupe du r\u00f4le
+message.removegroup-success=Le groupe ''{0}'' a bien \u00e9t\u00e9 retir\u00e9.
+message.removegroup-failure=Impossible de supprimer le groupe ''{0}''.
 
 panel.adduser.header=Ajouter un utilisateur
 panel.addgroup.header=Ajouter un groupe
