--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_fr.properties
@@ -34,13 +34,13 @@ button.createevent=Cr\u00e9er un \u00e9v\u00e9nement
 button.addaction=Ajouter une \u00e9tape
 button.createaction=Ajouter une \u00e9tape
 
-message.getActionFailure=Impossible d'obtenir la planification de disposition
+message.getActionFailure=Impossible d'obtenir la r\u00e8gle de conservation
 message.savingAction=Enregistrement en cours de l'\u00e9tape
 message.saveActionFailure=Impossible d'enregistrer l'\u00e9tape
 title.deleteAction=Supprimer
 label.confirmDeleteAction=\u00cates-vous s\u00fbr de vouloir supprimer l'\u00e9tape\u00a0?
 message.deletingAction=Suppression en cours de l'\u00e9tape
-message.deleteActionSuccess=L'\u00e9tape a \u00e9t\u00e9 supprim\u00e9e
+message.deleteActionSuccess=L'\u00e9tape a bien \u00e9t\u00e9 supprim\u00e9e
 message.deleteActionFailure=Impossible de supprimer l'\u00e9tape
 message.loadingSteps=Chargement en cours des \u00e9tapes...
 message.noSteps=Il n'existe aucune \u00e9tape. Cliquer sur Ajouter une \u00e9tape pour en cr\u00e9er une.
