--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_fr.properties
@@ -1,12 +1,12 @@
 label.user=Utilisateur
 label.dateAndTime=Date et heure
 label.parentPath=Chemin
-label.recordSeriesIdentifier=Identificateur de s\u00e9rie des documents d'archives
-label.recordCategoryIdentifier=Identificateur de cat\u00e9gorie de document d'archives
-label.recordFolderIdentifier=Identificateur de dossier d'archives
-label.vitalRecordIndicator=Identificateur de document d'archives essentiel
-label.dispositionAuthority=Droit de disposition
+label.recordSeriesIdentifier=Identifiant de s\u00e9rie des documents d'archives
+label.recordCategoryIdentifier=Identifiant de cat\u00e9gorie de document d'archives
+label.recordFolderIdentifier=Identifiant de dossier d'archives
+label.vitalRecordIndicator=Identifiant de document d'archives essentiel
+label.dispositionAuthority=D\u00e9tenteur principal
 label.noDispositionAuthority=Aucun
-label.dispositionSchedule=Planification de disposition
+label.dispositionSchedule=R\u00e8gle de conservation
 label.noActions=Pas d'\u00e9tapes
 label.noActionDescription=(aucune instruction)
