--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_fr.properties
@@ -1,16 +1,16 @@
-message.getpermissionsfail=Impossible de r\ufffdcup\ufffdrer les droits d'acc\ufffds depuis le serveur.
-message.selectauthority=S\ufffdlectionnez un utilisateur ou un groupe
+message.getpermissionsfail=Impossible de r\u00e9cup\u00e9rer les permissions depuis le serveur.
+message.selectauthority=S\u00e9lectionnez un utilisateur ou un groupe
 message.authoritypickerfail=Impossible de charger l'outil de recherche des droits.
-message.finish-success=La mise \ufffd jour des droits d'acc\ufffds a r\ufffdussi.
-message.finish-failure=Impossible de mettre \ufffd jour les droits d''acc\ufffds\ufffd: ''{0}''
+message.finish-success=Les permissions ont bien \u00e9t\u00e9 mises \u00e0 jour.
+message.finish-failure=Impossible de mettre \u00e0 jour les permissions\u00a0: ''{0}''
 
-label.title=G\ufffdrer les droits d''acc\ufffds : {0}
-label.inherit=H\ufffdriter des droits d'acc\ufffds
+label.title=G\u00e9rer les permissions : {0}
+label.inherit=H\u00e9riter des permissions
 label.readonly=Lecture seule
 label.readandfile=Lire et archiver
-label.inherited=h\ufffdrit\ufffd
+label.inherited=h\u00e9rit\u00e9
 label.local=local
-label.permissions=Droits d'acc\ufffds
+label.permissions=Permissions
 label.actions=Actions
 label.usersgroups=Utilisateurs et groupes
 
