--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_fr.properties
@@ -3,8 +3,8 @@ label.select = S\u00e9lectionner
 label.record-link = Lier \u00e0 document d'archives
 label.record-rel = Relation
 label.name = Nom r\u00e9f\u00e9rence
-label.required = Champs Obligatoire
+label.required = Champ obligatoire
 label.create=Cr\u00e9er
 label.cancel=Annuler
-label.fileplan= Plan de fichier
+label.fileplan= Plan de classification
 message.createfail=Impossible de cr\u00e9er une nouvelle r\u00e9f\u00e9rence
