--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_fr.properties
@@ -11,4 +11,4 @@ message.getRuleFailure=Impossible de charger les informations de la r\u00e8gle
 message.deletingRule=Suppression de la r\u00e8gle...   
 message.confirm.delete.title=Supprimer la r\u00e8gle
 message.confirm.delete=\u00cates-vous s\u00fbr de vouloir supprimer la r\u00e8gle ?
-message.loading=Chargement du plan de fichier...
+message.loading=Chargement du plan de classification...
