--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_fr.properties
@@ -20,5 +20,5 @@ header.action=Ex\u00e9cuter une action
 message.creating=Cr\u00e9ation de la r\u00e8gle...
 message.updating=Mise \u00e0 jour de la r\u00e8gle...
 message.persist-failure=Impossible de sauvegarder la r\u00e8gle
-message.createAnotherRule=Succ\u00e8s de la cr\u00e9ation de la r\u00e8gle 
-message.loading=Chargement du plan de fichier...
+message.createAnotherRule=La r\u00e8gle a bien \u00e9t\u00e9 cr\u00e9\u00e9e 
+message.loading=Chargement du plan de classification...
