--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_fr.properties
@@ -36,7 +36,7 @@ inmemory.uploadsize.exceeded=Votre navigateur ne prend pas en charge les ajouts 
 
 
 # RM Specific properties
-header.multiUpload=Documents d'archive de fichier
+header.multiUpload=Classer des documents d'archives
 button.selectFiles=S\u00e9lectionner les documents d'archive \u00e0 archiver
 
 header.import=Importer
