--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_fr.properties
@@ -18,8 +18,8 @@ label.minorVersion=Version mineure
 label.majorVersion=Version majeure
 label.comments=Commentaires
 
-message.uploading=Document en cours d'ajout...
-message.success=Document ajout\u00e9 avec succ\u00e8s
+message.uploading=Document en cours de t\u00e9l\u00e9chargement...
+message.success=Le document a bien \u00e9t\u00e9 t\u00e9l\u00e9charg\u00e9
 message.failure=Le document n'a pu \u00eatre ajout\u00e9
 
 label.contentType=Type de contenu
