--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_fr.properties
@@ -2,45 +2,45 @@
 header=Choisir le dossier de destination
 
 ## Copy To
-copy.node.root=Plan de fichier
-copy.node.unfiledroot=Documents d'archives unifi\ufffds
+copy.node.root=Plan de classification
+copy.node.unfiledroot=Documents d'archives non class\u00e9s
 copy.title.single=Copier {0} vers...
-copy.title.multi=Copier {0} \ufffdl\ufffdments vers...
+copy.title.multi=Copier {0} \u00e9l\u00e9ments vers...
 copy.button=Copier
-copy.message.no-files=Un fichier au moins doit \ufffdtre pr\ufffdcis\ufffd
+copy.message.no-files=Un fichier au moins doit \u00eatre pr\u00e9cis\u00e9
 copy.message.please-wait=Copie des fichiers en cours...
-copy.message.success=Succ\ufffds de la copie pour {0} \ufffdl\ufffdments
-copy.message.failure=Impossible de copier les \ufffdl\ufffdments
+copy.message.success={0} \u00e9l\u00e9ments ont bien \u00e9t\u00e9 copi\u00e9s
+copy.message.failure=Impossible de copier les \u00e9l\u00e9ments
 
 ## Move To
-move.node.root=Plan de fichier
-move.node.unfiledroot=Documents d'archives unifi\ufffds
-move.title.single=D\ufffdplacer {0} vers...
-move.title.multi=D\ufffdplacer {0} \ufffdl\ufffdments vers...
-move.button=D\ufffdplacer
-move.message.no-files=Un fichier au moins doit \ufffdtre pr\ufffdcis\ufffd
-move.message.please-wait=D\ufffdplacement des fichiers en cours...
-move.message.success=Succ\ufffds du d\ufffdplacement pour {0} \ufffdl\ufffdments
-move.message.failure=Impossible de d\ufffdplacer les \ufffdl\ufffdments
+move.node.root=Plan de classification
+move.node.unfiledroot=Documents d'archives non class\u00e9s
+move.title.single=D\u00e9placer {0} vers...
+move.title.multi=D\u00e9placer {0} \u00e9l\u00e9ments vers...
+move.button=D\u00e9placer
+move.message.no-files=Un fichier au moins doit \u00eatre pr\u00e9cis\u00e9
+move.message.please-wait=D\u00e9placement des fichiers en cours...
+move.message.success={0} \u00e9l\u00e9ments ont bien \u00e9t\u00e9 d\u00e9plac\u00e9s
+move.message.failure=Impossible de d\u00e9placer les \u00e9l\u00e9ments
 
 ## Link To
-link.node.root=Plan de fichier
-link.node.unfiledroot=Documents d'archives unifi\ufffds
-link.title.single=Lier {0} \ufffd...
-link.title.multi=Lier {0} \ufffdl\ufffdments \ufffd...
+link.node.root=Plan de classification
+link.node.unfiledroot=Documents d'archives non class\u00e9s
+link.title.single=Lier {0} \u00e0...
+link.title.multi=Lier {0} \u00e9l\u00e9ments \u00e0...
 link.button=Lien
-link.message.no-files=Un fichier au moins doit \ufffdtre pr\ufffdcis\ufffd
+link.message.no-files=Un fichier au moins doit \u00eatre pr\u00e9cis\u00e9
 link.message.please-wait=Fichiers en cours de liaison...
-link.message.success=Succ\ufffds de la liaison de {0} \ufffdl\ufffdments
-link.message.failure=Impossible de lier les \ufffdl\ufffdments
+link.message.success={0} \u00e9l\u00e9ments ont bien \u00e9t\u00e9 li\u00e9s
+link.message.failure=Impossible de lier les \u00e9l\u00e9ments
 
 ## File To
-file.node.root=Plan de fichier
-file.node.unfiledroot=Documents d'archives unifi\ufffds
+file.node.root=Plan de classification
+file.node.unfiledroot=Documents d'archives non class\u00e9s
 file.title.single=Archiver {0} vers...
-file.title.multi=Archiver {0} \ufffdl\ufffdments vers...
+file.title.multi=Archiver {0} \u00e9l\u00e9ments vers...
 file.button=Fichier
-file.message.no-files=Un fichier au moins doit \ufffdtre pr\ufffdcis\ufffd
+file.message.no-files=Un fichier au moins doit \u00eatre pr\u00e9cis\u00e9
 file.message.please-wait=Fichiers en cours d'archivage...
-file.message.success=Succ\ufffds de l''archivage de {0} \ufffdl\ufffdments
-file.message.failure=Impossible d'archiver les \ufffdl\ufffdments
+file.message.success={0} \u00e9l\u00e9ments ont bien \u00e9t\u00e9 class\u00e9s
+file.message.failure=Impossible d'archiver les \u00e9l\u00e9ments
