--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_fr.properties
@@ -1,20 +1,20 @@
-events.heading=\ufffdv\ufffdnements
-title.completedEvents=Termin\ufffd
+events.heading=\u00c9v\u00e9nements
+title.completedEvents=Termin\u00e9
 title.incompleteEvents=Incomplet
-title.completeEvent=Compl\ufffdter un \ufffdv\ufffdnement
-message.completingEvent=\ufffdv\ufffdnement en train d'\ufffdtre compl\ufffdt\ufffd
-message.completeEventFailure=L'\ufffdv\ufffdnement n'a pu \ufffdtre compl\ufffdt\ufffd
-message.revokingEvent=R\ufffdvocation d'\ufffdv\ufffdnement
-message.revokeEventFailure=Impossible de r\ufffdvoquer l'\ufffdv\ufffdnement
+title.completeEvent=Compl\u00e9ter un \u00e9v\u00e9nement
+message.completingEvent=\u00c9v\u00e9nement en train d'\u00eatre compl\u00e9t\u00e9
+message.completeEventFailure=L'\u00e9v\u00e9nement n'a pu \u00eatre compl\u00e9t\u00e9
+message.revokingEvent=R\u00e9vocation d'\u00e9v\u00e9nement
+message.revokeEventFailure=Impossible de r\u00e9voquer l'\u00e9v\u00e9nement
 label.automatic=Automatique
 label.manual=Manuel
-label.completedBy=Compl\ufffdt\ufffd par
-label.completedAt=Compl\ufffdt\ufffd le
-label.asOf=En date du
+label.completedBy=Compl\u00e9t\u00e9 par
+label.completedAt=Compl\u00e9t\u00e9 le
+label.asOf=Date de d\u00e9but
 label.noDispositionSchedule=Le cycle de vie de disposition n'existe pas.
-label.noEventsInDispositionSchedule=Il n''y a aucun \ufffdv\ufffdnement pour l''\ufffdtape ''{0}''.
+label.noEventsInDispositionSchedule=Il n''y a aucun \u00e9v\u00e9nement pour l''\u00e9tape ''{0}''.
 label.completeDispositionSchedule=Le cycle de vie de disposition est complet
-label.dispositionScheduleAppliedToFolder=La planification de disposition a \ufffdt\ufffd appliqu\ufffde au dossier parent d''archives, avec comme en date\ufffd: ''{0}''
-label.linkToFoldersDispositionSchedule=Voir les \ufffdv\ufffdnements du dossier parent
-label.loadFailure=Impossible de charger les \ufffdv\ufffdnements
-button.completeEvent=Compl\ufffdter un \ufffdv\ufffdnement
+label.dispositionScheduleAppliedToFolder=La r\u00e8gle de conservation a \u00e9t\u00e9 appliqu\u00e9e au dossier parent d''archives, avec comme date de d\u00e9but\u00a0: {0}
+label.linkToFoldersDispositionSchedule=Voir les \u00e9v\u00e9nements du dossier parent
+label.loadFailure=Impossible de charger les \u00e9v\u00e9nements
+button.completeEvent=Compl\u00e9ter un \u00e9v\u00e9nement
