--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_fr.properties
@@ -35,12 +35,12 @@ label.button-view-log=Afficher le journal complet
 label.button-specify=D\u00e9finir
 label.button-export=Exporter
 label.button-file-record=Archiver comme document d'archives
-label.button-apply=Appliquer
+label.button-apply=Ex\u00e9cuter le rapport d'audit
 label.button-details=D\u00e9tails
 
 label.filed-log-message=Le journal d'audit a \u00e9t\u00e9 archiv\u00e9 comme document d'archives.
 message.filing-log-fail=\u00c9chec de l'archivage du journal d'audit.
-label.file-record=Archiver le document d'archives
+label.file-record=Classer le document d'archives
 
 label.timestamp=Horodatage
 label.user=Utilisateur
@@ -55,7 +55,7 @@ label.all-users=Tous les utilisateurs
 label.remove-filter=Supprimer le filtre
 label.default-message=Cliquez sur 'Appliquer' pour afficher le journal d'audit
 
-node.root=Plan de fichier
+node.root=Plan de classification
 title.single=S\u00e9lectionner l'emplacement du document d'archives d'audit
 
 label.header-users=Utilisateurs
@@ -63,7 +63,7 @@ label.header-entries=Nombre d'entr\u00e9es
 label.header-from=De
 label.header-to=\u00c0
 label.header-event=\u00c9v\u00e9nement
-label.header-property=Propri\u00e9t\u00e9
+label.header-property=M\u00e9tadonn\u00e9es
 
 label.dialog-title=D\u00e9tails de l''\u00e9v\u00e9nement {0}
 label.property=Propri\u00e9t\u00e9
