--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_fr.properties
@@ -1,10 +1,10 @@
 message.get-roles-failure=Impossible de r\u00e9cup\u00e9rer les r\u00f4les utilisateur\u00a0: {0}
 message.get-role-failure=Impossible de r\u00e9cup\u00e9rer les capacit\u00e9s pour le r\u00f4le\u00a0 {0}
-message.delete.success=Le r\u00f4le a \u00e9t\u00e9 supprim\u00e9.
+message.delete.success=Le r\u00f4le a bien \u00e9t\u00e9 supprim\u00e9.
 message.delete.failure=Impossible de supprimer le r\u00f4le.
-message.edit-success=Le r\u00f4le a \u00e9t\u00e9 mis \u00e0 jour.
+message.edit-success=Le r\u00f4le a bien \u00e9t\u00e9 mis \u00e0 jour.
 message.edit-failure=Impossible de mettre \u00e0 jour le r\u00f4le.
-message.create-success=Le r\u00f4le a \u00e9t\u00e9 cr\u00e9\u00e9.
+message.create-success=Le r\u00f4le a bien \u00e9t\u00e9 cr\u00e9\u00e9.
 message.create-failure=Impossible de cr\u00e9er le r\u00f4le.
 
 label.roles=R\u00f4les
