--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/document-details/document-actions.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/document-details/document-actions.get_fr.properties
@@ -1,4 +1,4 @@
 heading=Actions
 
 ## Pop-up Messages
-message.error=Impossible d'acc\u00e9der au plan de fichier
+message.error=Impossible d'acc\u00e9der au plan de classification
