--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_fr.properties
@@ -1,7 +1,7 @@
 ## Title
-header.fileplan=Plan de fichier
+header.fileplan=Plan de classification
 
 ## Filters
 label.transfers=Transferts
 label.holds=Suspensions
-label.unfiledRecords=Documents d'archives unifi\u00e9s
+label.unfiledRecords=Documents d'archives non class\u00e9s
