--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
@@ -22,19 +22,13 @@ form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24\u00a0heures)
 
 record.folder.path.title=Cliquez pour afficher le texte d'aide pour le champ du chemin du dossier d'archives.
-record.folder.path.help=<p>Les substitutions suivantes sont autoris\u00e9es\u00a0:</p>\
-   <p></p>\
-   <p>date.day.short = Dim</p>\
-   <p>date.day = Dim</p>\
-   <p>date.day.long = Dimanche</p>\
-   <p>date.day.number = 7 (1-7)</p>\
-   <p>date.day.year = 216 (001-365)</p>\
-   <p>date.month.short = Ao\u00fb</p>\
-   <p>date.month = Ao\u00fb</p>\
-   <p>date.month.long = Ao\u00fbt</p>\
-   <p>date.month.number = 08 (01-12)</p>\
-   <p>date.year.short = 13</p>\
-   <p>date.year = 13</p>\
-   <p>date.year.long = 2013</p>\
-   <p>date.year.week = 31 (01-52)</p>\
-   <p>node.cm:title = <title value of the node></p>\
+record.folder.path.help=<p>Saisissez partiellement une propri\u00e9t\u00e9 d'archive pour afficher des options de saisie semi-automatique. Par exemple, si vous saisissez rm, les options suivantes s'affichent\u00a0:</p>\
+	<ul><li>- Date de versement au site des archives {node.rma:dateFiled}</li>\
+	<li>- Emplacement {node.rma:location}</li></ul>\
+	<p>Les archives seront plac\u00e9es dans le plan de classification en fonction de chaque valeur de propri\u00e9t\u00e9 d'archive individuelle.</p>\
+	<p>6\u00a0options maximum peuvent \u00eatre propos\u00e9es simultan\u00e9ment.</p>\
+	<p>Les options de date d\u00e9finissent cette partie du chemin \u00e0 la date \u00e0 laquelle la r\u00e8gle est ex\u00e9cut\u00e9e. Par exemple, si elle est ex\u00e9cut\u00e9e le lundi\u00a0:</p>\
+	<ul><li>- Jour en abr\u00e9g\u00e9 {date.day.short} = lun</li>\
+	<li>- Jour en long {date.day.long} = lundi</li>\
+	</ul><p>Consultez l'aide du module de gestion des archives pour la liste compl\u00e8te des options de saisie semi-automatique.</p>
+	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Cliquez ici pour toutes les options de saisie semi-automatique.</a></p>\
