--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_fr.properties
@@ -10,6 +10,6 @@ menu.option.run=Ex\u00e9cuter des r\u00e8gles pour ce dossier
 menu.option.run-recursive=Ex\u00e9cuter des r\u00e8gles pour ce dossier et ses sous-dossiers
 message.getRules-failure=Impossible de charger les r\u00e8gles
 message.runningRules=R\u00e8gle(s) en cours d'ex\u00e9cution...
-message.runRules-success=R\u00e8gle(s) ex\u00e9cut\u00e9e(s) avec succ\u00e8s
+message.runRules-success=R\u00e8gle(s) bien ex\u00e9cut\u00e9e(s)
 message.runRules-failure=Impossible d'ex\u00e9cuter les r\u00e8gles
-filePlan.label = Plan de fichier
+filePlan.label = Plan de classification
