--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_fr.properties
@@ -3,13 +3,13 @@ message.empty=Aucun r\u00e9sultat trouv\u00e9.
 message.error=Erreur durant la recherche
 message.foundresults={0} \u00e9l\u00e9ment(s) trouv\u00e9(s).
 message.errorloadsearches=Erreur lors du chargement des recherches enregistr\u00e9es.
-message.errorexport=Erreur lors de l'exporation des r\u00e9sultats de la recherche.
+message.errorexport=Erreur lors de l'exportation des r\u00e9sultats de la recherche.
 message.selectdate=S\u00e9lectionner la date
 
 
 message.deletesearch.title=Supprimer la recherche
 message.deletesearch.description=Voulez-vous vraiment supprimer la recherche ''{0}'' ?
-message.deletesearch.success=La recherche a \u00e9t\u00e9 supprim\u00e9e avec succ\u00e8s.
+message.deletesearch.success=La recherche a bien \u00e9t\u00e9 supprim\u00e9e.
 message.deletesearch.failure=La recherche n'a pas pu \u00eatre supprim\u00e9e.
 
 label.searchtitle=Rechercher
@@ -24,15 +24,15 @@ label.records=Afficher les documents d'archives (termin\u00e9s seulement)
 label.undeclared=Inclure incomplet
 label.vital=Afficher les essentiels seulement
 label.recordFolders=Afficher les dossiers d'archives
-label.recordCategories=Afficher les cat\u00e9gories des documents d'archive
-label.frozen=Afficher uniquement les en suspens (exclus lorsque non s\u00e9lectionn\u00e9s)
-label.cutoff=Afficher les limit\u00e9s uniquement
+label.recordCategories=Afficher les cat\u00e9gories des documents d'archives
+label.frozen=Afficher uniquement les suspendus (exclus lorsque non s\u00e9lectionn\u00e9s)
+label.cutoff=Afficher uniquement les d\u00e9class\u00e9s
 
 button.newsearch=Nouvelle recherche
 button.savesearch=Enregistrer la recherche...
 button.savedsearches=Recherches enregistr\u00e9es
 button.deletesearch=Supprimer la recherche
-button.print=Configuration de l'impression
+button.print=Gabarit pour l'\u00e9cran
 button.screen=Configuration d'\u00e9cran
 button.export=Exporter
 button.add-to-hold=Ajouter \u00e0 la suspension
@@ -46,20 +46,20 @@ label.sortNext=puis par
 label.sortNone=(Aucun)
 label.sortAscending=Croissant
 label.sortDescending=D\u00e9croissant
-label.dueForReview=Arriv\u00e9e \u00e0 \u00e9ch\u00e9ance pour v\u00e9rification
+label.dueForReview=Arriv\u00e9 \u00e0 \u00e9ch\u00e9ance pour v\u00e9rification
 label.components=Composants
-label.recordSeries=S\u00e9rie de document d'archive
+label.recordSeries=S\u00e9rie de documents d'archives
 label.parentFolder=Dossier parent
 
 
 # RMA search model metadata fields
 label.dispositionEvents=\u00c9v\u00e9nements de disposition
-label.dispositionActionName=Nom d'action de disposition
+label.dispositionActionName=Nom de l'action de disposition
 label.dispositionActionAsOf=Date de d\u00e9but de l'action de disposition
 label.dispositionEventsEligible=\u00c9v\u00e9nements de disposition \u00e9ligibles
-label.vitalRecordReviewPeriod=P\u00e9riode de v\u00e9rification de document d'archives essentiel
-label.hasDispositionSchedule=A une planification de disposition
+label.vitalRecordReviewPeriod=P\u00e9riode de v\u00e9rification du document d'archives essentiel
+label.hasDispositionSchedule=A une r\u00e8gle de conservation
 label.dispositionPeriod=P\u00e9riode de disposition
 label.dispositionInstructions=Instructions de disposition
-label.dispositionAuthority=Droit de disposition
+label.dispositionAuthority=D\u00e9tenteur principal
 label.holdReason=Motif de suspension
