--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_fr.properties
@@ -1,5 +1,5 @@
 header.singleUpload=T\u00e9l\u00e9charger un fichier
-header.multiUpload=Ajout de fichier(s)
+header.multiUpload=T\u00e9l\u00e9charger un ou plusieurs fichiers
 header.singleUpdate=Mettre le fichier \u00e0 jour
 header.singleImport=Importer
 
@@ -14,12 +14,12 @@ label.noFlash=Flash Player version 9.0.45 ou plus r\u00e9cente est requis pour p
   <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player Download Center</a>.
 label.success=Succ\u00e8s
 label.failure=Echec
-button.upload=Ajout de fichier(s)
+button.upload=T\u00e9l\u00e9charger un ou plusieurs fichiers
 label.uploadStatus=Statut : {0}/{1} ajout\u00e9(s) ({2} \u00e9chec(s))
 message.cancelStatus=T\u00e9l\u00e9chargement(s) annul\u00e9(s)\u00a0; {0} fichier(s) t\u00e9l\u00e9charg\u00e9s
 message.zeroByteFileSelected=Vous avez s\u00e9lectionn\u00e9 le fichier {0}. La taille de ce fichier est nulle et ce dernier ne peut pas \u00eatre ajout\u00e9.
 message.flashError.title=Erreur de communication Flash
-message.flashError.message=Le navigateur n'arrive pas \u00e0 communiquer avec l'injecteur Flash. Vous pouvez continuer en mode fichier unique ou rafra\u00eechir la page pour relancer Flash.
+message.flashError.message=Le navigateur n'arrive pas \u00e0 communiquer avec l'injecteur Flash. Vous pouvez continuer \u00e0 classer des fichiers en mode fichier unique ou rafra\u00eechir la page pour relancer Flash.
 
 section.version=Informations de version
 label.version=Cette version a :
