--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_fr.properties
@@ -1,7 +1,7 @@
-header=S\u00e9lectionnez le dossier de destination contenant des documents d'archive
-node.root=Plan de fichier
+header=S\u00e9lectionnez le dossier de destination contenant des documents d'archives
+node.root=Plan de classification
 title.single=Archiver le rapport vers...
 button.file=Archiver le rapport
 message.no-files=Un fichier au moins doit \u00eatre pr\u00e9cis\u00e9
 message.please-wait=Rapport en cours d'archivage...
-label.unfiled-records=Archiver le rapport vers les documents non archiv\u00e9s
+label.unfiled-records=Classer le rapport vers les documents d'archives non class\u00e9s
