SIMP CHINESE: Simplified Chinese RM 2.2 Updated UI Bundle based on EN rev75227
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@75314 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_zh_CN.properties
@@ -34,12 +34,12 @@ label.button-start=\u542f\u52a8
 label.button-view-log=\u67e5\u770b\u5b8c\u6574\u65e5\u5fd7
 label.button-specify=\u6307\u5b9a
 label.button-export=\u5bfc\u51fa
-label.button-file-record=\u5f52\u6863\u4e3a\u8bb0\u5f55
-label.button-apply=\u5e94\u7528
+label.button-file-record=\u7acb\u5377\u4e3a\u8bb0\u5f55
+label.button-apply=\u6267\u884c\u5ba1\u8ba1\u62a5\u544a
 label.button-details=\u8be6\u7ec6\u4fe1\u606f
 
-label.filed-log-message=\u5ba1\u8ba1\u65e5\u5fd7\u5df2\u5f52\u6863\u4e3a\u8bb0\u5f55\u3002
-message.filing-log-fail=\u5c06\u5ba1\u8ba1\u5f52\u6863\u4e3a\u8bb0\u5f55\u5931\u8d25\u3002
+label.filed-log-message=\u5ba1\u8ba1\u65e5\u5fd7\u5df2\u88ab\u7acb\u5377\u4e3a\u8bb0\u5f55\u3002
+message.filing-log-fail=\u5c06\u5ba1\u8ba1\u7acb\u5377\u4e3a\u8bb0\u5f55\u5931\u8d25\u3002
 label.file-record=\u7acb\u5377\u8bb0\u5f55
 
 label.timestamp=\u65f6\u95f4\u6233
@@ -63,7 +63,7 @@ label.header-entries=\u6761\u76ee\u6570
 label.header-from=\u53d1\u4ef6\u4eba
 label.header-to=\u6536\u4ef6\u4eba
 label.header-event=\u4e8b\u4ef6
-label.header-property=\u5c5e\u6027
+label.header-property=\u5143\u6570\u636e
 
 label.dialog-title={0} \u4e8b\u4ef6\u7684\u8be6\u7ec6\u4fe1\u606f
 label.property=\u5c5e\u6027
