--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_zh_CN.properties
@@ -10,7 +10,7 @@ label.mandatory=\u5fc5\u586b
 
 label.datatype.unknown=\u672a\u77e5
 label.datatype.text=\u6587\u672c
-label.datatype.boolean=\u5e03\u5c14\u503c
+label.datatype.boolean=\u6838\u53d6\u65b9\u5757
 label.datatype.date=\u65e5\u671f
 
 message.getpropertiesfail=\u65e0\u6cd5\u68c0\u7d22\u81ea\u5b9a\u4e49\u5c5e\u6027\u5b9a\u4e49\u3002
