--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-user-rights.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-user-rights.get_zh_CN.properties
@@ -1,5 +1,5 @@
 label.user-rights=\u7528\u6237\u6743\u9650
-label.userid=\u7528\u6237 Id
+label.userid=\u7528\u6237 ID
 label.roles=\u89d2\u8272
 label.groups=\u7ec4
 label.name=\u540d\u79f0
