--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_zh_CN.properties
@@ -7,7 +7,7 @@ message.finish-failure=\u65e0\u6cd5\u66f4\u65b0\u6743\u9650\uff1a{0}
 label.title=\u7ba1\u7406\u6743\u9650\uff1a{0}
 label.inherit=\u7ee7\u627f\u6743\u9650
 label.readonly=\u53ea\u8bfb
-label.readandfile=\u8bfb\u53d6\u548c\u5f52\u6863
+label.readandfile=\u8bfb\u53d6\u548c\u7acb\u5377
 label.inherited=\u7ee7\u627f\u7684
 label.local=\u672c\u5730
 label.permissions=\u6743\u9650
