--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_zh_CN.properties
@@ -6,7 +6,7 @@ label.is=\u4e3a
 label.sizeUnit=\u5b57\u8282
 label.transientProperty={1} \u4e2d\u7684 {0}
 message.getPropertiesFailure=\u65e0\u6cd5\u52a0\u8f7d\u5c5e\u6027
-message.getTagFailure=\u65e0\u6cd5\u52a0\u8f7d\u6807\u7b7e
+message.getTagFailure=\u65e0\u6cd5\u52a0\u8f7d\u6807\u8bb0
 
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
