--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_zh_CN.properties
@@ -14,7 +14,7 @@ message.deletesearch.failure=\u65e0\u6cd5\u5220\u9664\u641c\u7d22\u3002
 
 label.searchtitle=\u641c\u7d22
 label.searchterm=\u67e5\u8be2\u6587\u672c
-label.criteria=\u6807\u51c6
+label.criteria=\u6761\u4ef6
 label.results=\u7ed3\u679c
 label.insertfield=\u63d2\u5165\u5b57\u6bb5
 label.select=\u9009\u62e9...
@@ -35,7 +35,7 @@ button.deletesearch=\u5220\u9664\u641c\u7d22
 button.print=\u6253\u5370\u5e03\u5c40
 button.screen=\u5c4f\u5e55\u5e03\u5c40
 button.export=\u5bfc\u51fa
-button.add-to-hold=\u6dfb\u52a0\u5230\u4fdd\u5b58
+button.add-to-hold=\u52a0\u5165\u4fdd\u5b58
 
 # RM Results Common
 label.options=\u7ed3\u679c\u9009\u9879
