--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_zh_CN.properties
@@ -37,7 +37,7 @@ inmemory.uploadsize.exceeded=\u60a8\u7684\u6d4f\u89c8\u5668\u4e0d\u652f\u6301\u6
 
 # RM Specific properties
 header.multiUpload=\u7acb\u5377\u8bb0\u5f55
-button.selectFiles=\u9009\u62e9\u8981\u5f52\u6863\u7684\u8bb0\u5f55
+button.selectFiles=\u9009\u62e9\u8981\u7acb\u5377\u7684\u8bb0\u5f55
 
 header.import=\u5bfc\u5165
 button.selectImportFile=\u9009\u62e9\u5bfc\u5165\u6587\u4ef6
