--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/add-to-hold.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/add-to-hold.get_zh_CN.properties
@@ -1,6 +1,6 @@
-failure.template.not.loaded=\u65e0\u6cd5\u52a0\u8f7d\u6dfb\u52a0\u5230\u4fdd\u5b58\u6a21\u677f
+failure.template.not.loaded=\u65e0\u6cd5\u52a0\u8f7d\u52a0\u5165\u4fdd\u5b58\u6a21\u677f
 message.empty.holds=\u5df2\u9009\u9879\u6ca1\u6709\u4efb\u4f55\u53ef\u7528\u7684\u4fdd\u5b58
-header.hold=\u6dfb\u52a0\u5230\u4fdd\u5b58
-message.hold-success=\u5df2\u9009\u8282\u70b9\u5df2\u6210\u529f\u6dfb\u52a0\u5230\u6240\u9009\u4fdd\u5b58
-message.failure=\u6dfb\u52a0\u5230\u4fdd\u5b58\u6545\u969c
+header.hold=\u52a0\u5165\u4fdd\u5b58
+message.hold-success=\u5df2\u9009\u8282\u70b9\u5df2\u6210\u52a0\u5165\u6240\u9009\u4fdd\u5b58
+message.failure=\u52a0\u5165\u4fdd\u5b58\u5931\u8d25
 name.column.header=\u540d\u79f0
