--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -11,8 +11,8 @@ page.rmAudit.title=\u5ba1\u8ba1\u65e5\u5fd7
 page.rmAudit.description=\u5ba1\u8ba1\u65e5\u5fd7\u9875\u9762
 page.rmNewReference.title=\u65b0\u53c2\u8003
 page.rmNewReference.description=\u8bb0\u5f55\u4e4b\u95f4\u7684\u65b0\u53c2\u8003
-page.rmDispositionEdit.title=\u7f16\u8f91\u5904\u7f6e\u8868
-page.rmDispositionEdit.description=\u7528\u4e8e\u7f16\u8f91\u5904\u7f6e\u8868\u7684\u9875\u9762
+page.rmDispositionEdit.title=\u7f16\u8f91\u5904\u7f6e\u8ba1\u5212
+page.rmDispositionEdit.description=\u7528\u4e8e\u7f16\u8f91\u5904\u7f6e\u8ba1\u5212\u7684\u9875\u9762
 page.rmPermissions.title=\u7ba1\u7406\u6743\u9650
 page.rmPermissions.description=\u7528\u4e8e\u7ba1\u7406\u6743\u9650\u7684\u9875\u9762
 page.rmConsole.title=\u8bb0\u5f55\u7ba1\u7406\u63a7\u5236\u53f0
@@ -85,6 +85,8 @@ message.pdf-record-fonts.transfer=\u68c0\u67e5\u521a\u79fb\u4ea4\u7684\u4efb\u4f
 message.pdf-record-fonts.unknown=\u5982\u679c\u79fb\u4ea4\u6216\u5165\u7ba1\u7684\u5185\u5bb9\u5305\u542b PDF \u8bb0\u5f55\uff0c\u60a8\u5e94\u5f53\u68c0\u67e5\u662f\u5426\u5305\u542b\u4e86\u9002\u7528\u7684\u5d4c\u5165\u5b57\u4f53\u3002
 message.request-info-success=\u5df2\u6210\u529f\u8bf7\u6c42\u4fe1\u606f
 message.request-info-failure=\u5728\u8bf7\u6c42\u4fe1\u606f\u65f6\u51fa\u9519
+message.confirm.delete-hold.title=\u5220\u9664\u4fdd\u5b58
+message.confirm.delete-hold=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664 ''{0}''\uff1f
 
 ## Admin Console
 message.admin-console-access-denied=\u8981\u8bbf\u95ee\u8be5\u9875\u9762\uff0c\u60a8\u9700\u8981\u989d\u5916\u7684\u6743\u9650\u3002
@@ -105,16 +107,15 @@ actions.download=\u4e0b\u8f7d
 actions.download-zip=\u4e0b\u8f7d Zip
 actions.edit-details=\u7f16\u8f91\u5143\u6570\u636e
 actions.edit-disposition-as-of-date=\u7f16\u8f91\u5904\u7f6e\u65e5\u671f
-actions.edit-disposition-schedule=\u7f16\u8f91\u5904\u7f6e\u8868
+actions.edit-disposition-schedule=\u7f16\u8f91\u5904\u7f6e\u8ba1\u5212
 actions.edit-reason=\u7f16\u8f91\u4fdd\u5b58\u8be6\u7ec6\u4fe1\u606f
 actions.edit-review-as-of-date=\u7f16\u8f91\u5ba1\u67e5\u65e5\u671f
-actions.file-report=\u6587\u4ef6\u62a5\u544a
+actions.file-report=\u7acb\u5377\u62a5\u544a
 actions.link-to=\u94fe\u63a5\u5230...
-actions.file-to=\u5f52\u6863\u81f3...
+actions.file-to=\u7acb\u5377\u81f3...
 actions.manage-permissions=\u7ba1\u7406\u6743\u9650
 actions.move-to=\u79fb\u52a8\u5230...
 actions.open-folder=\u91cd\u65b0\u6253\u5f00\u6587\u4ef6\u5939
-actions.relinquish=\u89e3\u9664\u4fdd\u5b58
 actions.review-all=\u5ba1\u67e5\u5168\u90e8
 actions.reviewed=\u5df2\u5ba1\u67e5
 actions.add-record-metadata=\u6dfb\u52a0\u8bb0\u5f55\u5143\u6570\u636e
@@ -135,7 +136,7 @@ actions.file-destruction-report=\u751f\u6210\u9500\u6bc1\u62a5\u544a
 actions.end-retention=\u7ed3\u675f\u4fdd\u7559
 action.edit.hold=\u7f16\u8f91\u4fdd\u5b58
 actions.delete.hold=\u5220\u9664\u4fdd\u5b58
-actions.add-to-hold=\u6dfb\u52a0\u5230\u4fdd\u5b58
+actions.add-to-hold=\u52a0\u5165\u4fdd\u5b58
 actions.remove-from-hold=\u89e3\u9664\u4fdd\u5b58
 actions.file-hold-report=\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 
@@ -168,8 +169,6 @@ message.edit-review-as-of-date.failure=\u65e0\u6cd5\u66f4\u65b0\u5ba1\u67e5\u622
 message.edit-review-as-of-date.success=\u5df2\u6210\u529f\u66f4\u65b0 ''{0}'' \u7684\u5ba1\u67e5\u622a\u6b62\u65e5\u671f
 message.open-folder.failure=\u65e0\u6cd5\u6253\u5f00\u8bb0\u5f55\u6587\u4ef6\u5939 ''{0}''
 message.open-folder.success=\u8bb0\u5f55\u6587\u4ef6\u5939 ''{0}'' \u5df2\u6253\u5f00
-message.relinquish.failure=\u65e0\u6cd5\u89e3\u9664\u4fdd\u5b58
-message.relinquish.success=\u4fdd\u5b58\u5df2\u89e3\u9664
 message.review-all.failure=\u65e0\u6cd5\u5ba1\u67e5\u6587\u4ef6\u5939 ''{0}'' \u4e2d\u7684\u8bb0\u5f55
 message.review-all.success=\u5df2\u7ecf\u5ba1\u67e5\u6587\u4ef6\u5939 ''{0}'' \u4e2d\u7684\u8bb0\u5f55
 message.reviewed.failure=\u65e0\u6cd5\u5ba1\u67e5 ''{0}''
@@ -184,8 +183,8 @@ message.undeclare.failure=\u65e0\u6cd5\u91cd\u65b0\u6253\u5f00 ''{0}''
 message.undeclare.success=''{0}'' \u4e0d\u518d\u662f\u5b8c\u6574\u8bb0\u5f55
 message.undo-cutoff.failure=\u65e0\u6cd5\u64a4\u6d88 ''{0}'' \u7684\u4e2d\u65ad
 message.undo-cutoff.success=\u64a4\u6d88 ''{0}'' \u4e0a\u7684\u4e2d\u65ad
-message.create-disposition-schedule.failure=\u65e0\u6cd5\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8868
-message.create-disposition-schedule.success=\u5df2\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8868
+message.create-disposition-schedule.failure=\u65e0\u6cd5\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8ba1\u5212
+message.create-disposition-schedule.success=\u5df2\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8ba1\u5212
 message.create-record.success=\u5df2\u6210\u529f\u58f0\u660e\u4e3a\u8bb0\u5f55
 message.create-record.failure=\u65e0\u6cd5\u58f0\u660e\u4e3a\u8bb0\u5f55
 message.hide-record.success=\u8bb0\u5f55\u5df2\u9690\u85cf
@@ -198,13 +197,15 @@ message.file-destruction-report.failure=\u65e0\u6cd5\u751f\u6210\u9500\u6bc1\u62
 message.file-destruction-report.success=\u5df2\u751f\u6210\u9500\u6bc1\u62a5\u544a
 message.end-retention.failure=\u65e0\u6cd5\u7ed3\u675f\u4fdd\u7559
 message.end-retention.success=\u4fdd\u7559\u5df2\u7ed3\u675f
-message.file-success=\u5df2\u6210\u529f\u5c06\u79fb\u4ea4\u62a5\u544a\u5f52\u6863\u4e3a ''{0}''
-message.file-failure=\u65e0\u6cd5\u5b8c\u6210\u5f52\u6863\u64cd\u4f5c
+message.file-success=\u5df2\u6210\u529f\u5c06\u62a5\u544a\u7acb\u5377\u4e3a ''{0}''
+message.file-failure=\u65e0\u6cd5\u5b8c\u6210\u7acb\u5377\u64cd\u4f5c
 message.file-hold-report.failure=\u65e0\u6cd5\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 message.file-hold-report.success=\u5df2\u751f\u6210\u4fdd\u5b58\u62a5\u544a
+message.delete-hold.failure=\u65e0\u6cd5\u5220\u9664\u4fdd\u5b58 
+message.delete-hold.success=\u4fdd\u5b58\u5df2\u88ab\u5220\u9664
 
 ## File Plan Status Indicators
-status.rm-accession=\u5165\u7ba1\u5f85\u6c7a
+status.rm-accession=\u5165\u7ba1\u6302\u8d77
 status.rm-accessioned=\u5df2\u5165\u7ba1
 status.rm-closed=\u5df2\u5173\u95ed
 status.rm-cutoff=\u4e2d\u65ad
@@ -217,8 +218,8 @@ status.rm-transfer=\u79fb\u4ea4\u6302\u8d77
 status.rm-transferred=\u5df2\u79fb\u4ea4
 status.rm-vital-record=\u6838\u5fc3\u8bb0\u5f55
 status.rm-rejected-record=\u5df2\u62d2\u7edd
-status.rm-info-requested=\u5df2\u8bf7\u6c42\u4fe1\u606f
-status.rm-disposition-schedule=\u8bb0\u5f55\u7c7b\u522b\u5df2\u5b9a\u4e49\u5904\u7f6e\u8868
+status.rm-info-requested=\u8bf7\u6c42\u7684\u4fe1\u606f
+status.rm-disposition-schedule=\u8bb0\u5f55\u7c7b\u522b\u5df2\u5b9a\u4e49\u5904\u7f6e\u8ba1\u5212
 status.rm-digital-photograph-record=\u6570\u7801\u7167\u7247\u8bb0\u5f55
 status.rm-pdf-record=PDF \u8bb0\u5f55
 status.rm-scanned-record=\u626b\u63cf\u7684\u8bb0\u5f55
@@ -355,7 +356,7 @@ details.undeclared-record.info=\u4e0d\u5b8c\u6574\u7684\u8bb0\u5f55
 details.transfer-container.title=\u79fb\u4ea4 {0}
 details.transfer-container.is-accession=<em>\u6ce8\uff1a</em>\u79fb\u4ea4\u7c7b\u578b\u4e3a\u5165\u7ba1
 # Hold Container
-details.hold.title=\u4fdd\u5b58\u521b\u5efa\u4e8e {0}
+details.hold.title=\u4fdd\u5b58\u521b\u5efa\u65f6\u95f4 {0}
 details.hold.title.date-format=dd mmmm yyyy 'at' HH:MM:ss
 details.hold.reason=\u4fdd\u5b58\u539f\u56e0
 details.hold.reason.none=\u4e0d\u53ef\u7528
@@ -444,10 +445,11 @@ file-to.substitution.date.day.label=\u661f\u671f\u6570\uff08\u4f8b\u5982\u5468\u
 file-to.substitution.date.day.long.label=\u5168\u957f\u661f\u671f\u6570\uff08\u4f8b\u5982\u661f\u671f\u4e00\uff09
 file-to.substitution.date.day.number.label=\u5929\u6570\uff08\u4f8b\u5982 1\uff09
 file-to.substitution.date.day.year.label=\u4e00\u5e74\u4e2d\u7684\u7b2c\u51e0\u5929\uff08\u4f8b\u5982\u7b2c 216 \u5929\uff09
+file-to.substitution.date.day.month.label= \u4e00\u4e2a\u6708\u4e2d\u7684\u7b2c\u51e0\u5929\uff08\u4f8b\u5982\u7b2c 18 \u5929\uff09
 file-to.substitution.date.month.short.label=\u7f29\u5199\u6708\u4efd\uff08\u4f8b\u5982\u4e00\u6708\uff09
 file-to.substitution.date.month.label=\u6708\u4efd\uff08\u4f8b\u5982\u4e00\u6708\uff09
 file-to.substitution.date.month.long.label=\u5168\u957f\u6708\u4efd\uff08\u4f8b\u5982\u4e00\u6708\uff09
-file-to.substitution.date.month.number.label=\u6708\u4efd\uff08\u4f8b\u5982 01\uff09
+file-to.substitution.date.month.number.label=\u6708\u4efd\u7f16\u53f7\uff08\u4f8b\u5982 01\uff09
 file-to.substitution.date.year.short.label=\u7f29\u5199\u5e74\u4efd\uff08\u4f8b\u5982 14\uff09
 file-to.substitution.date.year.label=\u5e74\uff08\u4f8b\u5982 14 \u5e74\uff09
 file-to.substitution.date.year.long.label=\u5168\u957f\u5e74\u4efd\uff08\u4f8b\u5982 2014 \u5e74\uff09
