--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_zh_CN.properties
@@ -34,10 +34,10 @@ label.button-start=\u542f\u52a8
 label.button-view-log=\u67e5\u770b\u5b8c\u6574\u65e5\u5fd7
 label.button-specify=\u6307\u5b9a
 label.button-export=\u5bfc\u51fa
-label.button-file-record=\u5f52\u6863\u4e3a\u8bb0\u5f55
+label.button-file-record=\u7acb\u5377\u4e3a\u8bb0\u5f55
 
-label.filed-log-message=\u5ba1\u8ba1\u65e5\u5fd7\u5df2\u5f52\u6863\u4e3a\u8bb0\u5f55\u3002
-message.file-log-fail=\u5c06\u5ba1\u8ba1\u5f52\u6863\u4e3a\u8bb0\u5f55\u5931\u8d25\u3002
+label.filed-log-message=\u5ba1\u8ba1\u65e5\u5fd7\u5df2\u88ab\u7acb\u5377\u4e3a\u8bb0\u5f55\u3002
+message.file-log-fail=\u5c06\u5ba1\u8ba1\u7acb\u5377\u4e3a\u8bb0\u5f55\u5931\u8d25\u3002
 label.file-record=\u7acb\u5377\u8bb0\u5f55
 
 
