--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_zh_CN.properties
@@ -16,7 +16,7 @@ button.fullwindow.enter=\u5168\u7a97\u53e3
 button.fullscreen.enter=\u5168\u5c4f
 button.fullscreen.exit=\u9000\u51fa\u5168\u5c4f
 button.setDefaultView=\u5c06 ''{0}'' \u8bbe\u7f6e\u4e3a\u8be5\u6587\u4ef6\u5939\u7684\u9ed8\u8ba4\u503c
-button.removeDefaultView=\u5c06 ''{0}'' \u4f5c\u4e3a\u6587\u4ef6\u5939\u7684\u9ed8\u8ba4\u503c\u5220\u9664
+button.removeDefaultView=\u5c06 ''{0}'' \u4f5c\u4e3a\u8be5\u6587\u4ef6\u5939\u7684\u9ed8\u8ba4\u503c\u5220\u9664
 button.electronic=\u7535\u5b50
 button.non-electronic=\u975e\u7535\u5b50
 button.report=\u62a5\u544a
@@ -47,7 +47,7 @@ menu.selected-items.delete=\u5220\u9664
 menu.selected-items.destroy=\u9500\u6bc1
 menu.selected-items.export=\u5bfc\u51fa
 menu.selected-items.link-to=\u94fe\u63a5\u5230...
-menu.selected-items.file-to=\u5f52\u6863\u81f3...
+menu.selected-items.file-to=\u7acb\u5377\u81f3...
 menu.selected-items.move-to=\u79fb\u52a8\u5230...
 menu.selected-items.reviewed=\u5df2\u5ba1\u67e5
 menu.selected-items.transfer=\u79fb\u4ea4
@@ -55,8 +55,8 @@ menu.selected-items.transfer-complete=\u79fb\u4ea4\u786e\u8ba4
 menu.selected-items.undo-cutoff=\u64a4\u6d88\u4e2d\u65ad
 
 ## Pop-up Messages
-message.file.type=\u60a8\u5f52\u6863\u7684\u662f\u7535\u5b50\u8fd8\u662f\u975e\u7535\u5b50\u8bb0\u5f55\uff1f
-message.file.type.title=\u5f52\u6863\u7c7b\u578b
+message.file.type=\u60a8\u7acb\u5377\u7684\u662f\u7535\u5b50\u8fd8\u662f\u975e\u7535\u5b50\u8bb0\u5f55\uff1f
+message.file.type.title=\u7acb\u5377\u7c7b\u578b
 message.multiple-delete.failure=\u65e0\u6cd5\u5220\u9664\u9879\u76ee
 message.multiple-delete.success=\u5df2\u6210\u529f\u5220\u9664 {0} \u4e2a\u9879\u76ee
 title.multiple-delete.confirm=\u786e\u8ba4\u591a\u9879\u5220\u9664
@@ -85,10 +85,10 @@ description.transfers=\u79fb\u4ea4
 description.transfers.more=\uff08\u7b49\u5f85\u201c\u79fb\u4ea4\u5b8c\u6210\u201d\u6216\u201c\u5165\u7ba1\u5b8c\u6210\u201d\u7684\u8bb0\u5f55\uff09
 description.transfers.more.filterDisplay=\u5f53\u524d\u6b63\u5728\u67e5\u770b ''{0}''
 description.holds=\u5f53\u524d\u7684\u4fdd\u5b58
-description.holds.more=\uff08\u5904\u4e8e\u201c\u6682\u505c\u201d\u72b6\u6001\u7684\u8bb0\u5f55\u548c\u8bb0\u5f55\u6587\u4ef6\u5939\uff09
+description.holds.more=\uff08\u5904\u4e8e\u201c\u4fdd\u5b58\u4e2d\u201d\u72b6\u6001\u7684\u8bb0\u5f55\u548c\u8bb0\u5f55\u6587\u4ef6\u5939\uff09
 description.holds.more.filterDisplay=\u5f53\u524d\u6b63\u5728\u67e5\u770b ''{0}''
-description.unfiledRecords=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
-description.unfiledRecords.more=\uff08\u6ca1\u6709\u7acb\u5377\u7684\u8bb0\u5f55\uff09
+description.unfiledRecords=\u672a\u7acb\u5377\u8bb0\u5f55
+description.unfiledRecords.more=\uff08\u6ca1\u6709\u88ab\u7acb\u5377\u7684\u8bb0\u5f55\uff09
 description.unfiledRecords.more.filterDisplay=\u5f53\u524d\u6b63\u5728\u67e5\u770b ''{0}''
 
 ## Browser dialogs
