--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_zh_CN.properties
@@ -3,7 +3,7 @@ header=\u9009\u62e9\u76ee\u6807\u6587\u4ef6\u5939
 
 ## Copy To
 copy.node.root=\u5f52\u7c7b\u65b9\u6848
-copy.node.unfiledroot=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
+copy.node.unfiledroot=\u672a\u7acb\u5377\u8bb0\u5f55
 copy.title.single=\u5c06 {0} \u590d\u5236\u5230...
 copy.title.multi=\u5c06 {0} \u4e2a\u9879\u76ee\u590d\u5236\u5230...
 copy.button=\u590d\u5236
@@ -14,7 +14,7 @@ copy.message.failure=\u65e0\u6cd5\u590d\u5236\u9879\u76ee
 
 ## Move To
 move.node.root=\u5f52\u7c7b\u65b9\u6848
-move.node.unfiledroot=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
+move.node.unfiledroot=\u672a\u7acb\u5377\u8bb0\u5f55
 move.title.single=\u5c06 {0} \u79fb\u52a8\u5230...
 move.title.multi=\u5c06 {0} \u4e2a\u9879\u76ee\u79fb\u52a8\u5230...
 move.button=\u79fb\u52a8
@@ -25,7 +25,7 @@ move.message.failure=\u65e0\u6cd5\u79fb\u52a8\u9879\u76ee
 
 ## Link To
 link.node.root=\u5f52\u7c7b\u65b9\u6848
-link.node.unfiledroot=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
+link.node.unfiledroot=\u672a\u7acb\u5377\u8bb0\u5f55
 link.title.single=\u5c06 {0} \u94fe\u63a5\u81f3...
 link.title.multi=\u5c06 {0} \u4e2a\u9879\u76ee\u94fe\u63a5\u81f3...
 link.button=\u94fe\u63a5
@@ -36,11 +36,11 @@ link.message.failure=\u65e0\u6cd5\u94fe\u63a5\u9879\u76ee
 
 ## File To
 file.node.root=\u5f52\u7c7b\u65b9\u6848
-file.node.unfiledroot=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
-file.title.single=\u5c06 {0} \u5f52\u6863\u81f3...
-file.title.multi=\u5c06 {0} \u4e2a\u9879\u76ee\u5f52\u6863\u81f3...
+file.node.unfiledroot=\u672a\u7acb\u5377\u8bb0\u5f55
+file.title.single=\u5c06 {0} \u7acb\u5377\u81f3...
+file.title.multi=\u5c06 {0} \u4e2a\u9879\u76ee\u7acb\u5377\u81f3...
 file.button=\u6587\u4ef6
 file.message.no-files=\u5fc5\u987b\u81f3\u5c11\u63d0\u4f9b\u4e00\u4e2a\u6587\u4ef6
-file.message.please-wait=\u6b63\u5728\u5f52\u6863\u6587\u4ef6...
-file.message.success=\u5df2\u6210\u529f\u5f52\u6863 {0} \u4e2a\u9879\u76ee
-file.message.failure=\u65e0\u6cd5\u5f52\u6863\u9879\u76ee
+file.message.please-wait=\u6b63\u5728\u7acb\u5377\u6587\u4ef6...
+file.message.success=\u5df2\u6210\u529f\u7acb\u5377 {0} \u4e2a\u9879\u76ee
+file.message.failure=\u65e0\u6cd5\u7acb\u5377\u9879\u76ee
