--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/remove-from-hold.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/remove-from-hold.get_zh_CN.properties
@@ -2,5 +2,5 @@ failure.template.not.loaded=\u65e0\u6cd5\u52a0\u8f7d\u89e3\u9664\u4fdd\u5b58\u76
 message.empty.holds=\u5df2\u9009\u9879\u6ca1\u6709\u4efb\u4f55\u53ef\u7528\u7684\u4fdd\u5b58
 header.hold=\u89e3\u9664\u4fdd\u5b58
 message.hold-success=\u6240\u9009\u8282\u70b9\u5df2\u6210\u529f\u89e3\u9664\u4fdd\u5b58
-message.failure=\u89e3\u9664\u4fdd\u5b58\u6545\u969c
+message.failure=\u89e3\u9664\u4fdd\u5b58\u5931\u8d25
 name.column.header=\u540d\u79f0
