Reverted to revision 76845
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.2@78815 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_ru.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_ru.properties
@@ -42,12 +42,12 @@ menu.selected-items.deselect-all=\u0421\u043d\u044f\u0442\u044c \u0432\u0441\u04
 menu.selected-items.accession=\u0414\u043e\u0441\u0442\u0443\u043f
 menu.selected-items.accession-complete=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043d\u0438\u0435 \u0434\u043e\u0441\u0442\u0443\u043f\u0430
 menu.selected-items.copy-to=\u041a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0432...
-menu.selected-items.cutoff=\u041e\u0442\u0441\u0435\u0447\u044c / \u041e\u0442\u0440\u0435\u0437\u0430\u0442\u044c
+menu.selected-items.cutoff=\u041e\u0442\u043a\u043b\u044e\u0447\u0438\u0442\u044c
 menu.selected-items.delete=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
 menu.selected-items.destroy=\u0423\u043d\u0438\u0447\u0442\u043e\u0436\u0438\u0442\u044c
 menu.selected-items.export=\u042d\u043a\u0441\u043f\u043e\u0440\u0442
 menu.selected-items.link-to=\u0421\u0432\u044f\u0437\u0430\u0442\u044c \u0441...
-menu.selected-items.file-to=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0432 \u0441\u0431\u043e\u0440\u043d\u0438\u043a / \u0421\u0434\u0430\u0442\u044c \u0432 \u0430\u0440\u0445\u0438\u0432...
+menu.selected-items.file-to=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0432 \u0444\u0430\u0439\u043b...
 menu.selected-items.move-to=\u041f\u0435\u0440\u0435\u043c\u0435\u0441\u0442\u0438\u0442\u044c \u0432...
 menu.selected-items.reviewed=\u041f\u0440\u043e\u0432\u0435\u0440\u0435\u043d\u043e
 menu.selected-items.transfer=\u041f\u0435\u0440\u0435\u0434\u0430\u0442\u044c
