SPANISH: Spanish updated files based on EN-rev79092
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.2@79258 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_es.properties
@@ -32,3 +32,6 @@ record.folder.path.help=<p>Escriba una parte de la propiedad de un registro para
 	<li>- D\u00eda largo {date.day.long} = Lunes</li></ul>
 	<p>Consulte la Ayuda de gestión de documentos de archivo para obtener información sobre las opciones de autocompletar.</p>\
 	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Haga clic aqu\u00ed para ver todas las opciones de autocompletar.</a></p>\
+	
+fileTo.path.label=Ruta a la carpeta de documentos de archivo
+fileTo.createRecordPath.label=Crear ruta de documentos de archivo
