--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
@@ -32,3 +32,6 @@ record.folder.path.help=<p>Saisissez partiellement une propri\u00e9t\u00e9 d'arc
 	<li>- Jour en long {date.day.long} = lundi</li>\
 	</ul><p>Consultez l'aide du module de gestion des archives pour la liste compl\u00e8te des options de saisie semi-automatique.</p>
 	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Cliquez ici pour toutes les options de saisie semi-automatique.</a></p>\
+
+fileTo.path.label=Chemin de dossier d'archives
+fileTo.createRecordPath.label=Cr\u00e9er un chemin d'acc\u00e8s du document d'archives
