--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
@@ -23,12 +23,15 @@ form.control.date-picker.display.time.format=HH:MM (24 ore)
 
 record.folder.path.title=Fare clic per visualizzare la guida per il campo del percorso della cartella di record.
 record.folder.path.help=<p>Digitare parte della propriet\u00e0 di un record per visualizzare le opzioni di completamento automatico. Ad esempio, digitando rm le opzioni comprendono:</p>\
-	<ul><li>- Data di archiviazione {node.rma:dateFiled}</li>\
-	<li>- Posizione {node.rma:location}</li></ul>\
-	<p>I record vengono inseriti nel Piano file in base a ogni singolo valore di propriet\u00e0 del record.</p>\
-	<p>Vengono presentate solo 6 opzioni per volta.</p>\
-	<p>Le opzioni relative alla data impostano la corrispondente parte del percorso sulla data in cui la regola viene eseguita. Ad esempio, se \u00e8 eseguita di luned\u00ec:</p>\
-	<ul><li>- Abbreviazione giorno {date.day.short} = Lun</li>\
-	<li>- Giorno per esteso {date.day.long} = Luned\u00ec</li></ul>\
-	<p>Si veda la guida relativa alla gestione dei record per tutte le opzioni di completamento automatico.</p>
-	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Fare clic qui per tutte le opzioni di completamento automatico.</a></p>\
+	 <ul><li>- Data di archiviazione {node.rma:dateFiled}</li>\
+	 <li>- Posizione {node.rma:location}</li></ul>\
+	 <p>I record vengono inseriti nel Piano file in base a ogni singolo valore di propriet\u00e0 del record.</p>\
+	 <p>Vengono presentate solo 6 opzioni per volta.</p>\
+	 <p>Le opzioni relative alla data impostano la corrispondente parte del percorso sulla data in cui la regola viene eseguita. Ad esempio, se \u00e8 eseguita di luned\u00ec:</p>\
+	 <ul><li>- Abbreviazione giorno {date.day.short} = Lun</li>\
+	 <li>- Giorno per esteso {date.day.long} = Luned\u00ec</li></ul>\
+	 <p>Si veda la guida relativa alla gestione dei record per tutte le opzioni di completamento automatico.</p>
+	 <p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Fare clic qui per tutte le opzioni di completamento automatico.</a></p>\
+	
+fileTo.path.label=Indirizza nella cartella di record
+fileTo.createRecordPath.label=Crea percorso del record
