--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_nl.properties
@@ -32,3 +32,6 @@ record.folder.path.help=<p>Typ een gedeelte van een recordeigenschap om automati
 	<li>- Dag lang {date.day.long} = Maandag</li>\</ul>\
 	<p>Raadpleeg de Help bij Records Management Help voor alle automatisch ingevulde opties.</p>
 	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Klik hier voor alle automatisch ingevulde opties.</a></p>\
+	
+fileTo.path.label=Pad naar archiefmap
+fileTo.createRecordPath.label=Recordpad maken
