BRAZILIAN: Brazilian Portuguese updated files based on EN-rev79092
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.2@79263 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_pt_BR.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_pt_BR.properties
@@ -32,3 +32,6 @@ record.folder.path.help=<p>Digite parte de uma propriedade de um documento arqui
 	<li>- Dia Longo {date.day.long} = Segunda</li></ul>
 	<p>Consulte a Ajuda do Records Management para todas as op\u00e7\u00f5es de preenchimento autom\u00e1tico.</p>\
 	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Clique aqui para todas as op\u00e7\u00f5es de preenchimento autom\u00e1tico.</a></p>\
+	
+fileTo.path.label=Caminho para pasta de documento arquiv\u00edstico
+fileTo.createRecordPath.label=Criar caminho do documento arquiv\u00edstico
