SIMP CHINESE: Simplified Chinese updated files based on EN-rev79092
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.2@79264 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_zh_CN.properties
@@ -32,3 +32,6 @@ record.folder.path.help=<p>\u8bf7\u8f93\u5165\u90e8\u5206\u7eaa\u5f55\u5c5e\u602
 	<li>- \u957f\u65e5 {date.day.long} = Monday</li></ul>
 	<p>\u60a8\u53ef\u4ee5\u5728\u8bb0\u5f55\u7ba1\u7406\u5e2e\u52a9\u91cc\u53c2\u9605\u6240\u6709\u81ea\u52a8\u5b8c\u6210\u7684\u9009\u9879\u3002</p>\
 	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">\u70b9\u51fb\u6b64\u5904\u4ee5\u67e5\u770b\u5168\u90e8\u7684\u81ea\u52a8\u5b8c\u6210\u9009\u9879\u3002</a></p>\
+
+fileTo.path.label=\u8bb0\u5f55\u6587\u4ef6\u5939\u7684\u8def\u5f84
+fileTo.createRecordPath.label=\u521b\u5efa\u8bb0\u5f55\u8def\u5f84
