RUSSIAN: Russian updated files based on EN-rev79092. This bundle also includes fixes for RM-1611
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.2@79265 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/customizations/components/node-details/node-header.get_ru.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/customizations/components/node-details/node-header.get_ru.properties
@@ -1,1 +1,1 @@
-path.documents=\u041d\u043e\u043c\u0435\u043d\u043a\u043b\u0430\u0442\u0443\u0440\u0430 \u0434\u0435\u043b
+path.documents=\u0410\u0440\u0445\u0438\u0432
