Bug fixes for RM-1764, RM-1765 and RM-1766
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@92106 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/AlfRmActionService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/AlfRmActionService.properties
@@ -1,3 +1,4 @@
 label.title.new-relationship=New Relationship
 label.button.create=Create
 label.button.cancel=Cancel
+label.add.relationship.success=Successfully added relationship
