--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_ru.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_ru.properties
@@ -27,4 +27,4 @@ message.delete-failure=\u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u0
 mandatory.true=\u0418\u0441\u0442\u0438\u043d\u0430
 mandatory.false=\u041b\u043e\u0436\u044c
 
-button.new.custom-metadata=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
+button.new.custom-metadata=\u0421\u043e\u0437\u0434\u0430\u0442\u044c
